--- a/body/introduction.tex
+++ b/body/introduction.tex
@@ -80,6 +80,15 @@ The Protractor system protects video content from non-consensual AI training\tex
     \item Its easy-to-use implementation allows everyone to apply AI poisoning\textsuperscript{[37]} without requiring advanced technical expertise.
 \end{itemize}
 
+\section{Timeline}
+\label{section:timeline}
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.5\textwidth]{chapter_2/competitors/competitive-analysis.png}
+    \caption{Timeline of Project development}
+
+\end{figure}
+
 \section{Terminology}
 \label{section:terminology}
 
