--- a/body/introduction.tex
+++ b/body/introduction.tex
@@ -10,7 +10,7 @@ This AI has been utilized in many ways, such as to use AI character models to us
 
 But the conception of Generative AI has been controversial in itself
 
-It was trained with data scraped from the internet\textsuperscript{[4]}, with no regards to copyright permission or robot.txt\textsuperscript{[29]} that ask them to not use their data on their website for AI training. Of course, this sparked an outrage amongst the owner of the stolen works, who rely on commission or unique products as their main income source. Video AI is no different. Some AI engineers have been transparent on sourcing their training data only from copyright-free and ethical datasets\textsuperscript{[3]}, but the majority of the existing trained AI models\textsuperscript{[2]} does not make the separation at all, to the point that they openly advertised fine-tuned models that generate artwork in the style of specific artists, using their names..\newline
+It was trained with data scraped from the internet\textsuperscript{[4]}, with no regards to copyright permission or robot.txt\textsuperscript{[29]} that ask them to not use their data on their website for AI training. Of course, this sparked an outrage amongst the owner of the stolen works, who rely on commission or unique products as their main income source. Video AI is no different. Some AI engineers have been transparent on sourcing their training data only from copyright-free and ethical datasets\textsuperscript{[3]} (AnimateDiff, Adobe Firefly, Text2Video) , but the majority of the existing trained AI models\textsuperscript{[2]} does not make the separation at all (MidJourney, Sora, CogVideoX, Runway, Kling, etc.) , to the point that they openly advertised fine-tuned models that generate artwork in the style of specific artists, using their names.\newline
 
 The widespread use of this AI has led to concerns about copyright infringement\textsuperscript{[1]}, Many artists and content creators advocate for stricter regulations to protect their works from being used without consent, to protect the future of their career. \newline
 
@@ -80,14 +80,25 @@ The Protractor system protects video content from non-consensual AI training\tex
     \item Its easy-to-use implementation allows everyone to apply AI poisoning\textsuperscript{[37]} without requiring advanced technical expertise.
 \end{itemize}
 
+\clearpage
+
 \section{Timeline}
 \label{section:timeline}
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.5\textwidth]{chapter_2/competitors/competitive-analysis.png}
+    \includegraphics[width=0.5\textwidth]{chapter_1/labels.png}
+    \caption{Color Meaning chart}
+
+\end{figure}
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=1\textwidth]{chapter_1/timeline.png}
     \caption{Timeline of Project development}
 
 \end{figure}
+
+In Figure 1.2. is the current timeline of our project plan.
+You may look up to Figure 1.1. for color code meanings.
 
 \section{Terminology}
 \label{section:terminology}
