rough SRS updates
- set AI Component chapter
- update discussion
- update software arch
- update softwaredev (software development methodology)

--- a/body/discussion.tex
+++ b/body/discussion.tex
@@ -11,3 +11,13 @@ Thus, we currently are doing AI workshop labs in our freetime, advised by our pr
 AI labs
 - Cat-dog Classification
 - stAdv application
+- text-to-video training
+- BTC-UAP poisoning result and statistics
+- Quantifiable Metrics of video generation model degradation via adversarial attack
+
+We have to be clear in privacy and use of customer data, where we confirm at no point in the development of this project we infringed existing copyright or user's data. User's data will not be collected to use nor bypass their own copyright. Any use will be towards to display degradation of poisoned model but the data itself will not be recorded nor made public to any identity. In any case, user can choose to opt out in the settings regarding the privacy of their contents, which might disabled some UI features.
+
+We are new to many tech such as Electron js Huggingface and NVIDIA NIM, along with pytorch <queue system in python lib>
+
+structure design method overall approved by advisors
+
