--- a/body/softwaredevelopment.tex
+++ b/body/softwaredevelopment.tex
@@ -4,6 +4,24 @@
 \section{Software Development Methodology}
 \label{section:software-development-methodology}
 <TIP: Describe your software development methodology in this section. />
+Extreme Programming (XP)
+In short, it is -
+-Extreme programming (XP) is an Agile project management methodology that targets speed and simplicity with short development cycles. XP uses five guiding values, five rules, and 12 practices for programming. The structure is rigid, but the result of these highly focused sprints and continuous integrations can result in a much higher quality product.
+
+- asana's summary of XP 
+
+By definition, XP is ...
+
+In this project's case,
+
+
+has 3 professor to overview work consistently
+2 people project
+fixed deadlines
+4 months project work time in total
+consistent testing
+single codebase
+
 
 \section{Technology Stack}
 \label{section:technology-stack}
