--- a/body/softwarearchitecture.tex
+++ b/body/softwarearchitecture.tex
@@ -28,11 +28,11 @@ diagrams are particularly useful for illustrating the interactions between diffe
 components or objects in a system over time, showcasing the flow of messages
 or actions between them./>
 
-\section{Algorithm}
-\label{section:algorithm}
-<TIP: Optional, If you are working on a research project that proposes a new
-algorithm, you can describe your algorithm here. It can be in the form of
-pseudocode or any diagram that you deem appropriate./>
+% \section{Algorithm}
+% \label{section:algorithm}
+% <TIP: Optional, If you are working on a research project that proposes a new
+% algorithm, you can describe your algorithm here. It can be in the form of
+% pseudocode or any diagram that you deem appropriate./>
 
 \section{AI Component}
 \label{section:ai-component}
@@ -47,8 +47,6 @@ pseudocode or any diagram that you deem appropriate./>
         \item LPIPS : ranges from 0 to infinity. High perceptual similarity is close to 0.
         \item SSIM : ranges from -1 to 1. High perceptual similarity is close to 1.
     \end{enumerate}
-    \item 
-    \item 
 \end{enumerate}
 
 \subsection{Hardware Optimization Component}
