change topic for chapter 5

--- a/body/softwaredevelopment.tex
+++ b/body/softwaredevelopment.tex
@@ -1,12 +1,12 @@
-\chapter{Software Development}
-\label{chap:software-development}
+\chapter{AI Component Design}
+\label{chap:AI-Component-Design}
 
-\section{Software Development Methodology}
-\label{section:software-development-methodology}
+\section{Business Context \& AI Integration}
+\label{section:Business-Context-AI-Integration}
 <TIP: Describe your software development methodology in this section. />
 
-\section{Technology Stack}
-\label{section:technology-stack}
+\section{Goal Hierarchy}
+\label{section:Goal-Hierarchy}
 <TIP: Describe your technology stack here. See the following example from ThaiProgrammer.org />
 \begin{figure}[h]
     \centering
@@ -14,11 +14,14 @@
     \caption{Example technology stack}
 \end{figure}
 
-\section{Coding Standards}
-\label{section:coding-standards}
+\section{Task Requirements Analysis Using AI Canvas}
+\label{section:Task-Requirements-Analysis-Using-AI-Canvas}
 <TIP: Describe your coding standard for this project here. />
 
-\section{Progress Tracking Report}
-\label{section:progress-tracking-report}
+\section{Deployment Strategy}
+\label{section:Deployment-Strategy}
 <TIP: Show that you have been working on this project overtime.
 It can be in the form of a burndown chart or a contribution graph from GitHub./>
+
+\section{User Experience Design with AI}
+\label{section:User-Experience-Design-with-AI}
