--- a/body/softwarearchitecture.tex
+++ b/body/softwarearchitecture.tex
@@ -34,8 +34,8 @@ or actions between them./>
 % algorithm, you can describe your algorithm here. It can be in the form of
 % pseudocode or any diagram that you deem appropriate./>
 
-\section{AI Component}
-\label{section:ai-component}
+\section{AI Component old}
+\label{section:ai-component-old}
 
 \subsection{Poisoning Component}
 \label{subsection:poisoning-component}
