--- a/document.tex
+++ b/document.tex
@@ -68,7 +68,7 @@
     \include{body/relatedworks}
     \include{body/requirementanalysis}
     \include{body/softwarearchitecture}
-    \include{body/ai-component}
+    \include{body/aicomponent}
     \include{body/softwaredevelopment}
     \include{body/deliverable}
     \include{body/discussion}
