--- a/body/softwaredevelopment.tex
+++ b/body/softwaredevelopment.tex
@@ -1,8 +1,8 @@
-\chapter{AI Component Design}
-\label{chap:AI-Component-Design}
+\chapter{Software Development}
+\label{chap:software-development}
 
-\section{Business Context \& AI Integration}
-\label{section:Business-Context-AI-Integration}
+\section{Software Development Methodology}
+\label{section:software-development-methodology}
 <TIP: Describe your software development methodology in this section. />
 Extreme Programming (XP)
 In short, it is -
@@ -23,8 +23,8 @@ consistent testing
 single codebase
 
 
-\section{Goal Hierarchy}
-\label{section:Goal-Hierarchy}
+\section{Technology Stack}
+\label{section:technology-stack}
 <TIP: Describe your technology stack here. See the following example from ThaiProgrammer.org />
 \begin{figure}[h]
     \centering
@@ -32,14 +32,11 @@ single codebase
     \caption{Example technology stack}
 \end{figure}
 
-\section{Task Requirements Analysis Using AI Canvas}
-\label{section:Task-Requirements-Analysis-Using-AI-Canvas}
+\section{Coding Standards}
+\label{section:coding-standards}
 <TIP: Describe your coding standard for this project here. />
 
-\section{Deployment Strategy}
-\label{section:Deployment-Strategy}
+\section{Progress Tracking Report}
+\label{section:progress-tracking-report}
 <TIP: Show that you have been working on this project overtime.
 It can be in the form of a burndown chart or a contribution graph from GitHub./>
-
-\section{User Experience Design with AI}
-\label{section:User-Experience-Design-with-AI}
