--- a/body/aicomponent.tex
+++ b/body/aicomponent.tex
@@ -1,6 +1,9 @@
 \chapter{AI Component}
 \label{chap:ai-component}
 
+
+\section{Task Requirements Analysis Using AI Canvas}
+\label{section:Task-Requirements-Analysis-Using-AI-Canvas}
 \subsection{AI Task Requirements}
 
 \textbf{Objective:}  
@@ -29,7 +32,7 @@ To define what the AI poisoning system should achieve, how it will function, and
     \item ENV-4: May be extended later for use in video frame sequences.
 \end{itemize}
 
-\subsection{5.3.2 AI Canvas Development}
+\subsection{AI Canvas Development}
 
 \begin{table}[h]
 \centering
