add domain model

--- a/body/softwarearchitecture.tex
+++ b/body/softwarearchitecture.tex
@@ -7,8 +7,15 @@ However, there needs to be a coherency between them at the end./>
 
 \section{Domain Model}
 \label{section:domain-model}
-<TIP: Describe the business concept of your project. Showcase a
-domain model that captures the said concept./>
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.8\textwidth]{chapter_4/domain model.png}
+    \caption{Mockup of Main Process Design}
+    \label{fig:domain-model}
+\end{figure}
+
+The domain model of Vid Scratch (Figure \ref{fig:domain-model}) represents the conceptual structure of the video poisoning system, capturing high-level components while abstracting technical complexities like file I/O or GUI rendering.
 
 \section{Design Class Diagram}
 \label{section:design-class-diagram}
