--- a/body/softwarearchitecture.tex
+++ b/body/softwarearchitecture.tex
@@ -40,9 +40,11 @@ Frame is an object class containing the necessary information of the video frame
 
 \section{Design Class Diagram}
 \label{section:design-class-diagram}
-<TIP: Showcase a design class diagram for your project and explain
-how it works here. You can group classes into packages or layers to communicate your
-design better./>
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.8\textwidth]{chapter_4/domain_diagram.png}
+    \caption{Domain Diagram}
+\end{figure}
 
 \section{Sequence Diagram}
 \label{section:sequence-diagram}
