--- a/body/softwarearchitecture.tex
+++ b/body/softwarearchitecture.tex
@@ -44,6 +44,7 @@ Frame is an object class containing the necessary information of the video frame
     \centering
     \includegraphics[width=0.8\textwidth]{chapter_4/domain_diagram.png}
     \caption{Domain Diagram}
+    \label{fig:domain-model}
 \end{figure}
 
 \section{Sequence Diagram}
